--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@ a{
 </header>
 <div class="m-3 p-3" align="center">
     <div class="card bg-dark text-danger border-light" style="width: 18rem;">
-      <img src="apisanz.png" class="card-img-top p-4 rounded-circle">
+      <img src="www.sanzstore.org/api-sanz/apisanz.png" class="card-img-top p-4 rounded-circle">
       <div class="card-body">
         <p id="text" class="card-text font-monospace" align="justify"></p>
       </div>
@@ -53,34 +53,9 @@ a{
              </thead>
              <tbody>
                <tr>
-                 <td class="fs-6">dramaindo</td>
-                 <td><i class="text-success fs-3 bi bi-check-square-fill"></i></td>
-                 <td><a class="btn btn-danger" href="http://www.sanzstore.org/api/dramaindo?judul=vincenzo">example</a></td>
-               </tr>
-               <tr>
                  <td class="fs-6">drakorstation</td>
                  <td><i class="text-success fs-3 bi bi-check-square-fill"></i></td>
                  <td><a class="btn btn-danger" href="api/drakorstation?judul=vagabond">example</a></i></td>
-               </tr>
-               <tr>
-                 <td class="fs-6">daftar surah</td>
-                 <td><i class="text-success fs-3 bi bi-check-square-fill"></i></td>
-                 <td><a class="btn btn-danger" href="http://www.sanzstore.org/api/daftar_surah">example</a></i></td>
-               </tr>
-               <tr>
-                 <td class="fs-6">covid dunia</td>
-                 <td><i class="text-success fs-3 bi bi-check-square-fill"></i></td>
-                 <td><a class="btn btn-danger" href="api/covid">example</a></i></td>
-               </tr>
-               <tr>
-                 <td class="fs-6">covid country</td>
-                 <td><i class="text-success fs-3 bi bi-check-square-fill"></i></td>
-                 <td><a class="btn btn-danger" href="http://www.sanzstore.org/api/covid_country?query=indonesia">example</a></i></td>
-               </tr>
-               <tr>
-                 <td class="fs-6 text-danger">komiku</td>
-                 <td><i class="text-danger fs-3 bi bi-x-square-fill"></i></td>
-                 <td><small class="btn btn-danger">example</small></td>
                </tr>
              </tbody>
            </table>
