--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@ a{
 </header>
 <div class="m-3 p-3" align="center">
     <div class="card bg-dark text-danger border-light" style="width: 18rem;">
-      <img src="www.sanzstore.org/api-sanz/apisanz.png" class="card-img-top p-4 rounded-circle">
+      <img src="apisanz.png" class="card-img-top p-4 rounded-circle">
       <div class="card-body">
         <p id="text" class="card-text font-monospace" align="justify"></p>
       </div>
@@ -57,6 +57,11 @@ a{
                  <td><i class="text-success fs-3 bi bi-check-square-fill"></i></td>
                  <td><a class="btn btn-danger" href="api/drakorstation?judul=vagabond">example</a></i></td>
                </tr>
+               <tr>
+                 <td class="fs-6">covid dunia</td>
+                 <td><i class="text-success fs-3 bi bi-check-square-fill"></i></td>
+                 <td><a class="btn btn-danger" href="api/covid">example</a></i></td>
+               </tr>
              </tbody>
            </table>
     </div>
@@ -79,10 +84,9 @@ a{
 </div>
 <div align="center" class="bg-light text-dark p-1 ms-5 me-5 mt-5 font-monospace rounded-top">WEBSITE CODE LANGUAGE</div>
 <div class="p-2 ms-5 me-5 mb-5 rounded-bottom" style="border: 1px solid white;">
-	<i class="text-end text-light p-1">70,0% <a class="bg-light text-light">oooooooooooooo</a><a class="bg-secondary text-secondary">oooooo</a> PYTHON</i><br>
+	<i class="text-end text-light p-1">70,0% <a class="bg-light text-light">oooooooooooooo</a><a class="bg-secondary text-secondary">oooooo</a> PHP</i><br>
 	<i class="text-light p-1">25,0% <a class="bg-light text-light">ooooo</a><a class="bg-secondary text-secondary">ooooooooooooooo</a> HTML</i><br>
 	<i class="text-light p-1">5,00% <a class="bg-light text-light">o</a><a class="bg-secondary text-secondary">ooooooooooooooooooo</a> JS</i><br>
-        <i class="text-light p-1">0,00% <a class="bg-light text-light"></a><a class="bg-secondary text-secondary">oooooooooooooooooooo</a> PHP</i><br>
 </div>
 <div class="text-center mb-3">
   <i class="bi bi-github text-light"></i><a class="text-light fw-bold ms-1" href="https://github.com/sanzking">Github</a>
