--- a/templates/index.html
+++ b/templates/index.html
@@ -62,6 +62,16 @@ a{
                  <td><i class="text-success fs-3 bi bi-check-square-fill"></i></td>
                  <td><a class="btn btn-danger" href="api/covid">example</a></i></td>
                </tr>
+	       <tr>
+                 <td class="fs-6">dramaindo</td>
+                 <td><i class="text-success fs-3 bi bi-check-square-fill"></i></td>
+                 <td><a class="btn btn-danger" href="api/dramaindo?judul=vincenzo">example</a></i></td>
+               </tr>
+	       <tr>
+                 <td class="fs-6">filmapik new movie</td>
+                 <td><i class="text-success fs-3 bi bi-check-square-fill"></i></td>
+                 <td><a class="btn btn-danger" href="api/filmapik/new_movie">example</a></i></td>
+               </tr>
              </tbody>
            </table>
     </div>
