--- a/templates/index.html
+++ b/templates/index.html
@@ -69,8 +69,8 @@ a{
                </tr>
 	       <tr>
                  <td class="fs-6">filmapik new movie</td>
-                 <td><i class="text-success fs-3 bi bi-check-square-fill"></i></td>
-                 <td><a class="btn btn-danger" href="api/filmapik/new_movie">example</a></i></td>
+                 <td><i class="text-danger fs-3 bi bi-x-square-fill"></i></td>
+                 <td><a class="btn btn-danger" href="#">example</a></i></td>
                </tr>
              </tbody>
            </table>
