--- a/templates/asu.html
+++ b/templates/asu.html
@@ -1,4 +1,5 @@
 {% block head %}
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 {% endblock head %}
 {% block content %}
