--- a/templates/asu.html
+++ b/templates/asu.html
@@ -6,7 +6,7 @@
 <div class="m-5 p-5 bg-primary shadow rounded" align="center">
 <h1 class="text-center fw-bold text-light">SANZ AKSES</h1>
 <div class="mb-3"> 
-<form action="/akses" method="POST" enctype="multipart/form-data">
+<form action="/akses/self" method="POST" enctype="multipart/form-data">
 	<label class="mt-5 text-light fw-bold">Kode akses</label>
 	<input type="text" name="nama" class="mb-3 form-control" placeholder="enter your account here">
 	<button class="btn btn-success" type="submit">Gaskeun</button>
